--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Sección de ritmos -->
     <section class="music-section">
       <!-- ROCK -->
-      <div class="music-box rock-box" style="background-image: url('img/ROCK.PNG')">
+      <div class="music-box rock-box" style="background-image: url('img/ROCK.png')">
         <div class="music-box-header">
           <h2>Rock</h2>
         </div>
