--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
 
       <!-- POP -->
-      <div class="music-box" style="background-image: url('img/POP.JPG')">
+      <div class="music-box" style="background-image: url('img/POP.jpg')">
         <div class="music-box-header">
           <h2>Pop</h2>
         </div>
